<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.BrowseActivity">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_browse" />

    <TextView
        style="@style/AppTheme.SubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_activity_title" />

    <TextView
        style="@style/intro_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty_four_dp"
        android:text="@string/home_intro" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="1"
        tools:ignore="InefficientWeight" />

    <LinearLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        android:orientation="horizontal"
        android:padding="@dimen/eight_dp">

        <Button
            android:id="@+id/homeButton"
            style="@style/AppTheme.Button.Inactive"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_home_18"
            android:onClick="changeHomeOnClick"
            android:text="@string/title_home" />

        <Button
            android:id="@+id/browseButton"
            style="@style/AppTheme.Button"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_search_18"
            android:text="@string/title_browse" />

        <Button
            android:id="@+id/nowPlayingButton"
            style="@style/AppTheme.Button.Inactive"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_play_circle_outline_18"
            android:onClick="changePlayingOnClick"
            android:text="@string/title_now_playing" />

    </LinearLayout>

</LinearLayout>
