<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/sixteen_dp">

        <LinearLayout
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="InefficientWeight">

            <TextView
                android:id="@+id/artistNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mock_artist"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/songTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mock_song_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/songLengthView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/sixteen_dp"
                android:text="@string/track_total_length" />

            <ImageButton
                android:layout_width="@dimen/forty_two_dp"
                android:layout_height="@dimen/forty_two_dp"
                android:background="@color/colorTransparent"
                android:contentDescription="@string/play"
                android:onClick="changePlayingOnClick"
                android:src="@drawable/ic_play_circle_outline_36"
                android:tint="@color/colorWhite" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>